# Eye-tracking-Velocity-Threshold-Identification-I-VT-algorithm

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
examples/: example_usage.py  run_example.py
ivt/: __init__.py  algorithm.py  cli.py  io.py  io_utils.py  ivt_algorithm.py  visualization.py  viz.py
tests/: test_algorithm.py  test_ivt.py
