[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ivt"
version = "0.1.0"
description = "Velocity Threshold Identification (I-VT) algorithm for eye-movement classification."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Your Name" }]
dependencies = [
    "numpy>=1.23",
    "pandas>=1.5",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
viz = ["matplotlib>=3.6"]
dev = ["pytest>=7.0", "matplotlib>=3.6"]

[project.scripts]
ivt = "ivt.cli:main"

[tool.setuptools.packages.find]
include = ["ivt*"]
